# breeze-asr-local

./: .gitignore  AGENTS.md  CITATION.cff  README.md  [常用1]_台灣在地化的中文語音轉文字轉錄器_breeze_v3.py  llms.txt  pyproject.toml
docs/: perf_journey.md
notebooks/: README.md  colab_original.py
scripts/: build.ps1  setup.ps1  tune-power.ps1
src/asr_local/: __init__.py  audio.py  cli.py  model.py  segment.py  transcriber.py  vad.py  writer.py
src/breeze_asr/: audio.py  cli.py  transcriber.py
tests/: conftest.py  test_audio.py  test_cli.py  test_integration.py  test_model.py  test_segment.py  test_transcriber.py  test_vad.py  test_writer.py
tests/fixtures/json/: sample_output.json
